--- a/Bazaar Ghar/ar.lproj/Localizable.strings
+++ b/Bazaar Ghar/ar.lproj/Localizable.strings
@@ -123,7 +123,7 @@
 "orderplacemessage" = "تم تقديم طلبك مع بازارغار!!";
 "ordertrackid" = "معرف تتبع الطلب:";
 "thankyoushoppingmessage" = "شكرا للتسوق مع بازارغار. تم أيضًا إرسال رسالة تأكيد على الرقم المقدم.Top Video Shop للاستمتاع بالتسوق عبر الفيديو.";
-"contactusmessage" = "لا تتردد في الاتصال بنا، لأي استفسار بشأن طلبك الحالي أو الجديد، على رقم مركز الاتصال لدينا +923011166879 نحن نقدر بشدة تعليقات العملاء ونرحب بك كثيرًا لتقديم تعليقاتك على hello@bazaarghar.com";
+"contactusmessage" = "لا تتردد في الاتصال بنا، لأي استفسار بشأن طلبك الحالي أو الجديد، على رقم مركز الاتصال لدينا +923011166879 نحن نقدر بشدة تعليقات العملاء ونرحب بك كثيرًا لتقديم تعليقاتك على hello@souq.com";
 "continueshopping" = "مواصلة التسوق";
 //Place Order
 
