--- a/Bazaar Ghar/en.lproj/Localizable.strings
+++ b/Bazaar Ghar/en.lproj/Localizable.strings
@@ -114,10 +114,10 @@
 
 //Place Order
 
-"orderplacemessage" = "Your Order is placed with bazaarghar!!";
+"orderplacemessage" = "Your Order is placed with mysouq!!";
 "ordertrackid" = "Order Tracking ID:";
-"thankyoushoppingmessage" = "Thank you for shopping with Bazaarghar. confirmation message has also been sent on the provided number.. Tap video Shop to enjoy our video walee shopping.";
-"contactusmessage" = "Feel free to contact us,for any query on your existing or new order,on our call center number +923011166879 we sincerely value customer feedback and your more than welcome to give your feedback on hello@bazaarghar.com";
+"thankyoushoppingmessage" = "Thank you for shopping with MYSouq. confirmation message has also been sent on the provided number.. Tap video Shop to enjoy our video walee shopping.";
+"contactusmessage" = "Feel free to contact us,for any query on your existing or new order,on our call center number +923011166879 we sincerely value customer feedback and your more than welcome to give your feedback on hello@mysouq.com";
 "continueshopping" = "Continue Shopping";
 
 //Place Order
